[package]
name = "rippled-rs"
version = "0.1.0"
authors = ["zTgx <747674262@qq.com>"]
edition = "2018"
repository = "https://github.com/zTgx/rippled-rs.git"
readme = "README.md"
keywords = ["signing", "ed25519", "rippled", "blockchain", "secp256k1", "crypto"]
categories = [ "cryptography", "algorithms" ]
license = "MIT/Apache-2.0"
exclude = [ "/.travis.yml" ]
description = "A simplest customizable blockchain in Rust"


[dependencies]
secp256k1 = "0.15.1"
ed25519-dalek = "0.9.1"
serde_json = "1.0.40"
lazy_static = "1.3.0"
ws = "0.9.0"
